tests/error/union_unknown.gw
// [contains] unknown_type
union
{
	unknown_type unknown_variable;
};
